--- a/back-end/package.json
+++ b/back-end/package.json
@@ -13,6 +13,7 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.2",
     "express": "^4.16.3",
+    "express-session": "^1.15.6",
     "morgan": "^1.9.0",
     "passport": "^0.4.0",
     "pg-promise": "^8.4.4"
