--- a/back-end/package.json
+++ b/back-end/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.2",
+    "cookie-parser": "^1.4.3",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
     "morgan": "^1.9.0",
     "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "pg-promise": "^8.4.4"
   }
 }
